# natural-posterior-network

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
examples/: estimator.ipynb  pretrained.ipynb  toy_example.ipynb
natpn/: __init__.py  sweep.py  train.py
natpn/datasets/: __init__.py  _base.py  _registry.py  bike_sharing.py  cifar.py  mnist.py  nyu_depth_v2.py  sensorless_drive.py  uci.py
natpn/datasets/_utils/: __init__.py  dataset.py  ood.py  split.py  transforms.py
natpn/distributions/: __init__.py  _base.py  _utils.py  categorical.py  normal.py  poisson.py
natpn/metrics/: __init__.py  aucpr.py  brier.py  calibration.py
natpn/model/: __init__.py  estimator.py  lightning_module.py  lightning_module_flow.py  lightning_module_ood.py
natpn/nn/: __init__.py  ensemble.py  loss.py  model.py  scaler.py
natpn/nn/encoder/: __init__.py  densedepth.py  image_deep.py  image_shallow.py  resnet.py  tabular.py
natpn/nn/flow/: __init__.py  _base.py  maf.py  radial.py
natpn/nn/flow/transforms/: __init__.py  _base.py  batch_norm.py  masked.py  radial.py
natpn/nn/output/: __init__.py  _base.py  categorical.py  normal.py  poisson.py
natpn/utils/: __init__.py  chunk.py  clamp.py
sweeps/: sensorless_drive.py
sweeps/slurm/: cpu.sh  gpu.sh
